--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "private": true,
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
+    "@luxeui/ui": "^1.0.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -41,14 +42,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
+    "init": "^0.1.2",
     "jotai": "^2.12.5",
     "lucide-react": "^0.516.0",
+    "motion": "^12.23.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0",
     "tw-animate-css": "^1.3.4"
   },
   "devDependencies": {
