--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-config-next": "15.3.3",
     "jest": "^30.0.0",
     "prettier": "^3.5.3",
+    "tailwind-animate": "^0.2.10",
     "tailwindcss": "^4.1.10",
     "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
